--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "keywords": [],
   "dependencies": {
     "ejs": "~0.8.4",
-    "faker": "^2.1.1",
-    "grunt": "0.4.2",
+    "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-less": "~0.11.1",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sails-linker": "~0.9.5",
@@ -23,7 +22,7 @@
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
-    "sails-mongo": "^0.10.4"
+    "sails-mongo": "~0.10.4"
   },
   "scripts": {
     "start": "node app.js",
@@ -32,7 +31,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/anonymous node/sails user/shoppets.git"
+    "url": "git@bitbucket.org:shoppets/shoppets.git"
   },
   "author": "anonymous node/sails user",
   "license": ""
