--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "ejs": "~0.8.4",
+    "faker": "^2.1.1",
     "geocoder": "^0.2.2",
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
