--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
-    "sails-mongo": "~0.10.4",
-    "soap": "^0.6.0",
-    "ws.js": "0.0.19"
+    "sails-mongo": "~0.10.4"
   },
   "scripts": {
     "start": "node app.js",
