--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "mongodb": "^1.4.25",
+    "node-correios": "^2.0.2",
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
