--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "shoppets",
   "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
+  "version": "1.0.0",
+  "description": "Pets and Vets Geo Search application",
   "keywords": [],
   "dependencies": {
     "cep": "0.0.3",
     "ejs": "~0.8.4",
-    "faker": "^2.1.1",
+    "faker": "^2.1.2",
     "geocoder": "^0.2.2",
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -22,12 +22,11 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
-    "mongodb": "^1.4.25",
-    "node-correios": "^2.0.2",
+    "mongodb": "^1.4.29",
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
-    "sails-mongo": "~0.10.4"
+    "sails-mongo": "^0.10.5"
   },
   "scripts": {
     "start": "node app.js",
@@ -38,6 +37,6 @@
     "type": "git",
     "url": "git@bitbucket.org:shoppets/shoppets.git"
   },
-  "author": "anonymous node/sails user",
+  "author": "Paulo Márcio / João Paulo",
   "license": ""
 }
